Update to css from theme

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,9 @@
 	{% include header.html %}
 	<main>
 		<article>
-			{{ content }}
+			<div class="main-container">
+				{{ content }}
+			</div>
 		</article>
 		{% include footer.html %}
 	</main>
