--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -58,6 +58,10 @@ time {
 	max-width: $content-width;
 	margin: 0 auto;
 }
+.main-container {
+	margin: 20px 10%;
+	color: blue;
+}
 
 /* Aside */
 
