--- a/css/main.scss
+++ b/css/main.scss
@@ -12,3 +12,6 @@ body,h1,h2,h3,h4,h5,h6,p,blockquote,pre,hr,dl,dd,ol,ul,figure{margin:0;padding:0
 .main-container {
   margin: 40px 10%;
 }
+.img-max400 {
+  max-width: 400px;
+}
