--- a/css/main.scss
+++ b/css/main.scss
@@ -18,6 +18,12 @@ body {
 .img-max400 {
   max-width: 400px;
 }
-.rounded-6px{
+.rounded-6px {
   border-radius: 6px;
 }    
+.img-contact {
+    height: 2em;
+}
+.img-20em {
+    height: 20em;
+}
