initial fix for mobile menu

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -44,4 +44,9 @@
 			</div>
 		</div>
 	</div>
-	</footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="/menu.js"></script>
+    {% if page.showcount %}
+        <script src="/main.js"></script>
+    {% endif %}
+</footer>
