--- a/_includes/partial-blog-feed.html
+++ b/_includes/partial-blog-feed.html
@@ -1,4 +1,4 @@
-<h3>Feed of posts</h3>
+<h3>Recent posts</h3>
 {% for post in site.posts limit:3 %}
 		<time>{{ post.date | date: "%b %-d, %Y" }}</time>
 		<h3><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h3>
