--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,16 @@ layout: default
 
 {{ content }}
 
+{% if page.previous.url %}
+<a href="{{page.previous.url}}"><~ {{page.previous.title}}</a>
+{% endif %} |
+
+{% if page.next.url %}
+<a class="button is-link ellipsis" title="{{page.previous.title}}" href="{{page.next.url}}">{{page.next.title}} ~></a>
+{% endif %}
+
+<p></p>
+<p></p>
 
 <div id="disqus_thread"></div>
 <script>
