--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,10 @@
 layout: default
 ---
 
-<h1>{{ page.title }}</h1>
+<div class="a-page">
+
+    <h1>{{ page.title }}</h1>
 
     {{ content }}
 
+</div>
