--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,38 +1,40 @@
 ---
 layout: default
 ---
+<div class="a-page">
 
-<h1>{{ page.title }}</h1>
+    <h1>{{ page.title }}</h1>
 
-<time>{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</time>
+    <time>{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</time>
 
-{{ content }}
+    {{ content }}
 
-{% if page.previous.url %}
-<a href="{{page.previous.url}}"><~ {{page.previous.title}}</a>
-{% endif %} |
+    {% if page.previous.url %}
+    <a href="{{page.previous.url}}"><~ {{page.previous.title}}</a>
+    {% endif %} |
 
-{% if page.next.url %}
-<a class="button is-link ellipsis" title="{{page.previous.title}}" href="{{page.next.url}}">{{page.next.title}} ~></a>
-{% endif %}
+    {% if page.next.url %}
+    <a class="button is-link ellipsis" title="{{page.previous.title}}" href="{{page.next.url}}">{{page.next.title}} ~></a>
+    {% endif %}
 
-<p></p>
-<p></p>
+    <p></p>
+    <p></p>
 
-<div id="disqus_thread"></div>
+    <div id="disqus_thread"></div>
+</div>
 <script>
 
-   var disqus_config = function () {
-       this.page.url = "{{ page.url| prepend: site.baseurl | prepend: site.url }}";  // Replace PAGE_URL with your page's canonical URL variable
-       this.page.identifier = "{{ page.id }}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-   };
+    var disqus_config = function () {
+        this.page.url = "{{ page.url| prepend: site.baseurl | prepend: site.url }}";  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = "{{ page.id }}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
 
-(function() { // DON'T EDIT BELOW THIS LINE
-    var d = document, s = d.createElement('script');
-    s.src = 'https://dave-albert.disqus.com/embed.js';
-    s.setAttribute('data-timestamp', +new Date());
-    (d.head || d.body).appendChild(s);
-})();
+    (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://dave-albert.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+    })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
