--- a/css/main.scss
+++ b/css/main.scss
@@ -193,16 +193,20 @@ pre>code {
 
 .site-nav .page-link {
     color: #111;
-    line-height: 1.5
+    line-height: 1.5;
 }
 
 .site-nav .page-link:not(:last-child) {
-    margin-right: 20px
+    margin-right: 20px;
 }
 
 .sub-heading {
-    font-size: 38px;
-    font-weight: 600;
+    font-size: 38px !important;
+    font-weight: 600 !important;
+}
+
+.hidden {
+    display: none;
 }
 
 .ink {
@@ -234,6 +238,45 @@ a.link-text, a:visited.link-text {
 
 .a-page {
     margin: 4em;
+}
+
+.two-thirds {
+    max-width: 50%;
+}
+
+.mailchimp-form-container {
+    margin-top: 40px;
+}
+
+.green-button {
+    background-color: #2DCCBC !important;
+    color: black !important;
+    font-weight: 600 !important;
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px !important;
+    height: 56px !important;
+    width: 226px !important;
+}
+
+.mailchimp-input {
+    height: 56px !important;
+}
+
+.instagram-post {
+    //border: 1px solid black;
+    padding: 1em;
+    margin: 1em;
+    //max-width: 20%;
+}
+
+.insta-button {
+    margin: auto;
+    text-align: center;
+}
+
+p.footer {
+    margin: auto;
+    text-align: center;
 }
 
 @media screen and (max-width:600px) {
