--- a/css/main.scss
+++ b/css/main.scss
@@ -123,15 +123,6 @@ pre>code {
     padding-right: 70px;
 }
 
-@media screen and (max-width:800px) {
-    .wrapper {
-        max-width: -webkit-calc(800px - (30px));
-        max-width: calc(800px - (30px));
-        padding-right: 15px;
-        padding-left: 15px
-    }
-}
-
 .wrapper:after,
 .footer-col-wrapper:after {
     content: "";
@@ -180,7 +171,8 @@ pre>code {
 
 .site-nav {
     float: right;
-    line-height: 54px
+    line-height: 54px;
+    z-index: 100;
 }
 
 .site-nav .nav-trigger {
@@ -279,53 +271,7 @@ p.footer {
     text-align: center;
 }
 
-@media screen and (max-width:600px) {
-    .site-nav {
-        position: absolute;
-        top: 9px;
-        right: 15px;
-        background-color: #fdfdfd;
-        border: 1px solid #e8e8e8;
-        border-radius: 5px;
-        text-align: right
-    }
-    .site -nav label[for=nav-trigger] {
-        display: block;
-        float: right;
-        width: 36px;
-        height: 36px;
-        z-index: 2;
-        cursor: pointer
-    }
-    .site-nav .menu-icon {
-        display: block;
-        float: right;
-        width: 36px;
-        height: 26px;
-        line-height: 0;
-        padding-top: 10px;
-        text-align: center
-    }
-    .site-nav .menu-icon>svg path {
-        fill: #424242
-    }
-    .sit e-nav input~.trigger {
-        clear: both;
-        display: none
-    }
-    .site-nav input:checked~.trigger {
-        display: block;
-        padding-bottom: 5px
-    }
-    .site-nav .page-link {
-        display: block;
-        padding: 5px 10px;
-        margin-left: 20px
-    }
-    .site-nav .page-link:not(:last-child) {
-        margin-right: 0
-    }
-}
+
 
 .site-footer {
     border-top: 1px solid #e8e8e8;
@@ -370,26 +316,6 @@ p.footer {
     width: calc(45% - (30px/2))
 }
 
-@media screen and (max-width:800px) {
-    .footer-c ol-1,
-    .footer-col-2 {
-        width: -webkit-calc(50% - (30px/2));
-        width: calc(50% - (30px/2))
-    }
-    .footer-col-3 {
-        width: -webkit-calc(100% - (30px/2));
-        width: calc(100% - (30px/2))
-    }
-}
-
-@media screen and (max-width:600px) {
-    .footer-col {
-        float: none;
-        width: -webkit-calc(100% - (30px/2));
-        width: calc(10 0% - (30px/2))
-    }
-}
-
 .page-content {
     padding: 30px 0
 }
@@ -427,11 +353,7 @@ p.footer {
     line-height: 1
 }
 
-@media screen and (max-width:800px) {
-    .post-title {
-        font-size: 36px
-    }
-}
+
 
 .post-content {
     margin-bottom: 30px
@@ -441,30 +363,12 @@ p.footer {
     font-size: 32px
 }
 
-@media screen and (max-width:800px) {
-    .post-content h2 {
-        font-size: 28px
-    }
-}
-
 .post-content h3 {
     font-size: 26px
 }
 
-@media screen and (max-width:800px) {
-    .post-content h3 {
-        font-size: 22px
-    }
-}
-
 .post-content h4 {
     font-size: 20px
-}
-
-@media screen and (max-width:800px) {
-    .post-content h4 {
-        font-size: 18px
-    }
 }
 
 .highlight {
@@ -829,7 +733,22 @@ nav {
     border-bottom: 1px solid #ccc;
 }
 
+
+
+// Mobile Phone
 @media screen and (max-width:600px) {
+    .hero-text {
+        padding: 10% 0;
+        margin-left: 10px;
+    }
+
+    .instagram-post {
+        padding: 0; 
+        margin: 0;
+    }
+    .a-page {
+        margin: 1em;
+    }
     .trigger-hide {
         display: none;
     }
@@ -845,5 +764,104 @@ nav {
 
     .menu-icon {
         cursor: pointer;
+    }
+    .footer-col {
+        float: none;
+        width: -webkit-calc(100% - (30px/2));
+        width: calc(10 0% - (30px/2))
+    }
+
+    .inside-container {
+        padding: 1em;
+    }
+
+    .site-nav {
+        position: absolute;
+        top: 9px;
+        right: 1px;
+        background-color: #fdfdfd;
+        border: 1px solid #e8e8e8;
+        border-radius: 5px;
+        text-align: right
+    }
+    .site -nav label[for=nav-trigger] {
+        display: block;
+        float: right;
+        width: 36px;
+        height: 36px;
+        z-index: 2;
+        cursor: pointer
+    }
+    .site-nav .menu-icon {
+        display: block;
+        float: right;
+        width: 36px;
+        height: 26px;
+        line-height: 0;
+        padding-top: 10px;
+        text-align: center
+    }
+    .site-nav .menu-icon>svg path {
+        fill: #424242
+    }
+    .sit e-nav input~.trigger {
+        clear: both;
+        display: none
+    }
+    .site-nav input:checked~.trigger {
+        display: block;
+        padding-bottom: 5px
+    }
+    .site-nav .page-link {
+        display: block;
+        padding: 5px 10px;
+        margin-left: 20px
+    }
+    .site-nav .page-link:not(:last-child) {
+        margin-right: 0
+    }
+}
+
+//Tablet
+@media screen and (max-width:800px) {
+    .hero-text {
+        padding: 10% 0;
+        margin-left: 10px;
+    }
+
+    .instagram-post {
+        padding: 1px; 
+        margin: 1px;
+    }
+    .a-page {
+        margin: 1em;
+    }
+
+    .wrapper {
+        max-width: -webkit-calc(800px - (30px));
+        max-width: calc(800px - (30px));
+        padding-right: 15px;
+        padding-left: 15px
+    }
+    .post-content h4 {
+        font-size: 18px
+    }
+    .post-content h3 {
+        font-size: 22px
+    }
+    .post-content h2 {
+        font-size: 28px
+    }
+    .footer-c ol-1,
+    .footer-col-2 {
+        width: -webkit-calc(50% - (30px/2));
+        width: calc(50% - (30px/2))
+    }
+    .footer-col-3 {
+        width: -webkit-calc(100% - (30px/2));
+        width: calc(100% - (30px/2))
+    }
+    .post-title {
+        font-size: 36px
     }
 }
