browse more and image

--- a/css/main.scss
+++ b/css/main.scss
@@ -224,8 +224,9 @@ a.link-text, a:visited.link-text {
 
 .browse-more {
     margin: auto;
-    width: 170px;
+    width: 200px;
     text-align: center;
+    border: 1px #b0aaaa solid;
 }
 
 .a-page {
