--- a/_layouts/podcast.html
+++ b/_layouts/podcast.html
@@ -45,7 +45,15 @@ layout: page
 
 {{ content }}
 
+<div>
 
-<div class="mailchimp-form-container">
-{% include partial-mailchimp-form.html %}
+    <div>
+        <div class="mailchimp-form-container">
+        {% include partial-mailchimp-form.html %}
+        </div>
+    </div>
+
+    <div>
+        {% include disqus.html %}
+    </div>
 </div>
