--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,11 +1,24 @@
 ---
 layout: default
 ---
+{% if page.contentFullWidth %}
+<div class="full-page">
 
-<div class="a-page">
-
-    <h1>{{ page.title }}</h1>
+    {% if page.hideTitle != true %}
+        <h1>{{ page.title }}</h1>
+    {% endif %}
 
     {{ content }}
 
 </div>
+{% else %}
+<div class="a-page">
+
+{% if page.hideTitle != true %}
+    <h1>{{ page.title }}</h1>
+{% endif %}
+
+    {{ content }}
+
+</div>
+{% endif %}
