--- a/css/main.scss
+++ b/css/main.scss
@@ -718,7 +718,7 @@ nav {
     ul > li {
         float: left;
         padding: 0 1.4em;
-        margin-top: 80px;
+        margin-top: 50px;
     }
 }
 
@@ -818,6 +818,73 @@ nav {
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+.outer-container {
+    height: 100%;
+    width: 100%;
+    background-color: #2c2c2c;
+    .contact-container {
+        margin: auto;
+        //width: 75%;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        line-height: normal;
+        font-size: 20px;
+        letter-spacing: 0.08em;
+        background: url("/images/contact-bg.jpg") no-repeat;
+        background-size: 100%;
+        color: #ffffff;
+        padding: 40px;
+        input {
+            height: 61px;
+        }
+        textarea {
+            height: 213px;
+        }
+        textarea, input {
+            background-color: #ffffff0f;
+            width: 408px;
+            border: 1px solid #676767;
+            max-width: 90%;
+            color: #ffffff;
+            padding: 0 1em;
+        }
+        .submit {
+            margin-top: 20px;
+            width: 408px;
+            height: 61px;
+            left: 39px;
+            top: 973px;
+            background: #0BD5D4;
+            font-family: Roboto;
+            font-style: normal;
+            font-weight: normal;
+            line-height: normal;
+            font-size: 20px;
+            letter-spacing: 0.08em;
+            color: #FFFFFF;
+            max-width: 90%;
+        }
+        .buttons {
+            margin-top: 50px;
+            .button-container {
+                a img {
+                    margin: 10px;
+                }
+            }
+        }
+        .subscribe {
+            .open-modal  img {
+                width: 200px;
+            }
+        }
+    }
+}
+
+.right {
+    text-align: right;
 }
 // Mobile Phone
 @media screen and (max-width:600px) {
