--- a/css/main.scss
+++ b/css/main.scss
@@ -888,6 +888,9 @@ nav {
 }
 
 .episodes-container {
+    #mc_embed_signup {
+        background-color: #202022;
+    }
     background: url("/images/episodes-bg.jpg") no-repeat;
     background-size: 100%;
     background-color: #202022;
