--- a/css/main.scss
+++ b/css/main.scss
@@ -937,7 +937,8 @@ nav {
             .audio {
                 margin-top: 20px;
                 audio {
-                    border: 3px solid $my_green;
+                    border: 2px solid $my_green;
+                    padding: 2px;
                     border-radius: 40px;
                 }
             }
