--- a/css/main.scss
+++ b/css/main.scss
@@ -1195,12 +1195,6 @@ nav {
 
     }
 
-
-
-
-
-
-
     .podcast-icons {
         margin-top: 9px;
         width: 100%;
@@ -1225,4 +1219,148 @@ nav {
             }
         }
     }
+}
+/////////////////*APRIL style */////////////////////
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 2000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: black;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: white;
+  font-size: 50px;
+  font-family: roboto;
+  font-weight: bold;
+  padding: 450px 60px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: left;
+}
+
+.subtext {
+  color: white;
+  font-size: 2em;
+  font-family: roboto;
+  font-weight: bold;
+  padding: 400px 64px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: left;
+}
+
+.playbutton {
+  padding: 280px 64px;
+  position: absolute;
+  bottom: 8px;
+
+}
+
+////*slider2 *////
+
+
+.text2 {
+  color: #414141;
+  font-size: 50px;
+  font-family: roboto;
+  font-weight: bold;
+  padding: 650px 60px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: left;
+}
+
+.subtext2 {
+  color: #414141;
+  font-size: 2em;
+  font-family: roboto;
+  font-weight: bold;
+  padding: 600px 64px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: left;
+}
+
+.playbutton2 {
+  padding: 480px 64px;
+  position: absolute;
+  bottom: 8px;
+
+}
+
+
+
+
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #F7F7F7;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
 }
