--- a/css/main.scss
+++ b/css/main.scss
@@ -653,28 +653,10 @@ body {
     clear: both;
 }
 
-.hero {
-    background: url("/images/podcastbg.png") no-repeat bottom;
-    background-size: cover;
-    min-height: 45em;
-}
-.hero-text {
-    color: #ffffff;
-    padding: 10% 0;
-    margin-left: 70px;
-    position: relative;
-    font-family: 'Roboto', sans-serif;
-}
 
-.hero-text .hero-title H1 {
-    font-size: 3em;
-    font-weight: bold;
-}
 
-.hero-text .hero-subtitle H2 {
-    font-size: 2em;
-    font-weight: bold;
-}
+
+
 
 .img-max400 {
   max-width: 400px;
@@ -1242,7 +1224,7 @@ nav {
   font-size: 18px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
-  user-select: none;
+
 }
 
 /* Position the "next button" to the right */
@@ -1251,38 +1233,32 @@ nav {
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
+
 
 /* Caption text */
-.text {
+.head1 {
+  position: absolute;
+  top: 12%;
+  left: 3%;
+  font-size: 45px;
   color: white;
-  font-size: 50px;
   font-family: roboto;
   font-weight: bold;
-  padding: 450px 60px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: left;
 }
+.subtext1 {
+  position: absolute;
+  top: 22%;
+  left: 5%;
+  font-size:30px;
+  color: white;
+  font-family: roboto;
+  font-weight: bold;
+  }
 
-.subtext {
-  color: white;
-  font-size: 2em;
-  font-family: roboto;
-  font-weight: bold;
-  padding: 400px 64px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: left;
-}
 
 .playbutton {
-  padding: 280px 64px;
+  top: 36%;
+  left: 4%;
   position: absolute;
   bottom: 8px;
 
@@ -1292,33 +1268,31 @@ nav {
 
 
 .text2 {
-  color: #414141;
-  font-size: 50px;
+  position: absolute;
+  top: 12%;
+  left: 3%;
+  font-size: 45px;
+  color: #4d4d4d;
   font-family: roboto;
   font-weight: bold;
-  padding: 650px 60px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: left;
 }
 
 .subtext2 {
-  color: #414141;
-  font-size: 2em;
+  position: absolute;
+  top: 22%;
+  left: 5%;
+  font-size:30px;
+  color: #4d4d4d;
   font-family: roboto;
   font-weight: bold;
-  padding: 600px 64px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: left;
 }
 
 .playbutton2 {
-  padding: 480px 64px;
+  top: 32%;
+  left: 3%;
   position: absolute;
   bottom: 8px;
+
 
 }
 
