border on audio component

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -80,6 +80,7 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="/detect-browser.js"></script>
     <script src="/menu.js"></script>
     <script src="/main.js"></script>
 </footer>
