--- a/css/main.scss
+++ b/css/main.scss
@@ -937,9 +937,9 @@ nav {
             .audio {
                 margin-top: 20px;
                 audio {
-                    border: 2px solid $my_green;
-                    padding: 2px;
-                    border-radius: 40px;
+                    //border: 3px solid $my_green;
+                    //border-radius: 10px;
+                    //border-radius: 30px;
                 }
             }
 
