now-container --  text-align: center;

--- a/css/main.scss
+++ b/css/main.scss
@@ -852,6 +852,10 @@ nav {
   cursor: pointer;
 }
 
+.now-container {
+    text-align: center;
+}
+
 .outer-container {
     height: 100%;
     width: 100%;
