--- a/_includes/partial-podcast-feed.html
+++ b/_includes/partial-podcast-feed.html
@@ -13,7 +13,7 @@
                     <a class="link-text" href="/podcast/episode/{{ episode.transcript }}">{{ episode.title }}</a>
                 </p>
                 <p class="clear">
-                {{ episode.summary }}
+                {{ episode.encoded }}
                 </p>
             </div>
         </div>
