--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,10 +1,10 @@
 ---
 layout: default
 ---
-{% if page.contentFullWidth %}
+{% if page.contentFullWidth or layout.contentFullWidth %}
 <div class="full-page">
 
-    {% if page.hideTitle != true %}
+    {% if page.hideTitle != true and layout.hideTitle != true %}
         <h1>{{ page.title }}</h1>
     {% endif %}
 
@@ -14,7 +14,7 @@ layout: default
 {% else %}
 <div class="a-page">
 
-{% if page.hideTitle != true %}
+{% if page.hideTitle != true and layout.hideTitle != true %}
     <h1>{{ page.title }}</h1>
 {% endif %}
 
