--- a/_layouts/p404.html
+++ b/_layouts/p404.html
@@ -6,13 +6,24 @@ layout: default
 
     {{ content }}
 
-&nbsp;
+<div class="a-page">
+    &nbsp;
 
-or checkout some of my posts:
+    <h2>Or checkout some of our latest episodes:</h2>
 
-&nbsp;
-&nbsp;
+    &nbsp;
+    &nbsp;
 
-<hr>
+    <hr>
+    {% include partial-podcast-feed.html %}
+</div>
+<!--&nbsp;-->
 
-{% include partial-blog-feed.html %}
+<!--or checkout some of my posts:-->
+
+<!--&nbsp;-->
+<!--&nbsp;-->
+
+<!--<hr>-->
+
+<!--{% include partial-blog-feed.html %}-->
