--- a/css/main.scss
+++ b/css/main.scss
@@ -238,6 +238,12 @@ a.link-text, a:visited.link-text {
     }
 }
 
+.container404 {
+    background: #000000 url(/images/404_pageNotFound.jpg) no-repeat center bottom;
+    height: 40em;
+    width: 100%;
+}
+
 .center {
     text-align: center;
 }
